src/main/java/com/example/typist/model/errors/ApiSubError.java
package com.example.typist.model.errors;

public abstract class ApiSubError {
}
